tests: Makefile.am clean-up
Avoid duplicates GST_CHECK_CFLAGS and GST_OPTIONS_CFLAGS are already in
AM_CFLAGS. Add LDADD instead of GST_CHECK_LIBS for consistency.

--- a/tests/check/Makefile.am
+++ b/tests/check/Makefile.am
@@ -187,37 +187,34 @@ LDADD = $(GST_CHECK_LIBS)
 
 elements_camerabin_CFLAGS = \
 	$(GST_PLUGINS_BAD_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) \
-	$(GST_BASE_CFLAGS) $(GST_CHECK_CFLAGS) $(GST_CFLAGS) \
-	$(AM_CFLAGS) -DGST_USE_UNSTABLE_API
+	$(GST_BASE_CFLAGS) $(GST_CFLAGS) $(AM_CFLAGS) -DGST_USE_UNSTABLE_API
 elements_camerabin_LDADD = \
 	$(top_builddir)/gst-libs/gst/interfaces/libgstphotography-@GST_MAJORMINOR@.la \
 	$(GST_PLUGINS_BASE_LIBS) -lgstinterfaces-@GST_MAJORMINOR@ \
-	$(GST_BASE_LIBS) $(GST_CHECK_LIBS) $(GST_LIBS)
+	$(GST_BASE_LIBS) $(GST_LIBS) $(LDADD)
 
 elements_camerabin_SOURCES = elements/camerabin.c
 
 if BUILD_EXPERIMENTAL
 elements_camerabin2_CFLAGS = \
 	$(GST_PLUGINS_BAD_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) \
-	$(GST_BASE_CFLAGS) $(GST_CHECK_CFLAGS) $(GST_CFLAGS) \
-	$(AM_CFLAGS) -DGST_USE_UNSTABLE_API
+	$(GST_BASE_CFLAGS) $(GST_CFLAGS) $(AM_CFLAGS) -DGST_USE_UNSTABLE_API
 elements_camerabin2_LDADD = \
         $(top_builddir)/gst-libs/gst/interfaces/libgstphotography-@GST_MAJORMINOR@.la \
         $(top_builddir)/gst-libs/gst/basecamerabinsrc/libgstbasecamerabinsrc-@GST_MAJORMINOR@.la \
-        $(GST_PLUGINS_BASE_LIBS) $(GST_BASE_LIBS) $(GST_CHECK_LIBS) $(GST_LIBS) 
+        $(GST_PLUGINS_BASE_LIBS) $(GST_BASE_LIBS) $(GST_LIBS) $(LDADD)
 elements_camerabin2_SOURCES = elements/camerabin2.c
 
 elements_imagecapturebin_CFLAGS = \
 	$(GST_PLUGINS_BAD_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) \
-	$(GST_BASE_CFLAGS) $(GST_CHECK_CFLAGS) $(GST_CFLAGS) \
-	$(AM_CFLAGS) -DGST_USE_UNSTABLE_API
+	$(GST_BASE_CFLAGS) $(GST_CFLAGS) $(AM_CFLAGS) -DGST_USE_UNSTABLE_API
 elements_imagecapturebin_LDADD = \
 	$(GST_PLUGINS_BASE_LIBS) -lgstapp-@GST_MAJORMINOR@ \
-	$(GST_BASE_LIBS) $(GST_CHECK_LIBS) $(GST_LIBS)
+	$(GST_BASE_LIBS) $(GST_LIBS) $(LDADD)
 elements_imagecapturebin_SOURCES = elements/imagecapturebin.c
 endif
 
-elements_jifmux_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CHECK_CFLAGS) $(GST_OPTION_CFLAGS) $(AM_CFLAGS) $(EXIF_CFLAGS)
+elements_jifmux_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(EXIF_CFLAGS) $(AM_CFLAGS)
 elements_jifmux_LDADD = $(GST_PLUGINS_BASE_LIBS) -lgsttag-$(GST_MAJORMINOR) $(GST_CHECK_LIBS) $(EXIF_LIBS) $(LDADD)
 elements_jifmux_SOURCES = elements/jifmux.c
 
