--- a/pkgconfig/gstreamer-riff-uninstalled.pc.in
+++ b/pkgconfig/gstreamer-riff-uninstalled.pc.in
@@ -4,6 +4,8 @@ exec_prefix=
 libdir=
 # includedir is builddir because it is used to find gstconfig.h in places
 includedir=@abs_top_builddir@/gst-libs
+girdir=@abs_top_builddir@/gst-libs/gst/riff
+typelibdir=@abs_top_builddir@/gst-libs/gst/riff
 
 Name: GStreamer RIFF Library, Uninstalled
 Description: RIFF helper functions, uninstalled
