--- a/pkgconfig/gstreamer-audio-uninstalled.pc.in
+++ b/pkgconfig/gstreamer-audio-uninstalled.pc.in
@@ -4,6 +4,8 @@ exec_prefix=
 libdir=
 # includedir is builddir because it is used to find gstconfig.h in places
 includedir=@abs_top_builddir@/gst-libs
+girdir=@abs_top_builddir@/gst-libs/gst/audio
+typelibdir=@abs_top_builddir@/gst-libs/gst/audio
 
 Name: GStreamer Audio Library, Uninstalled
 Description: Audio helper functions and base classes, uninstalled
