--- a/pkgconfig/gstreamer-sdp-uninstalled.pc.in
+++ b/pkgconfig/gstreamer-sdp-uninstalled.pc.in
@@ -4,6 +4,8 @@ exec_prefix=
 libdir=
 # includedir is builddir because it is used to find gstconfig.h in places
 includedir=@abs_top_builddir@/gst-libs
+girdir=@abs_top_builddir@/gst-libs/gst/sdp
+typelibdir=@abs_top_builddir@/gst-libs/gst/sdp
 
 Name: GStreamer SDP Library, Uninstalled
 Description: SDP helper functions, uninstalled
