--- a/pkgconfig/gstreamer-tag-uninstalled.pc.in
+++ b/pkgconfig/gstreamer-tag-uninstalled.pc.in
@@ -4,6 +4,8 @@ exec_prefix=
 libdir=
 # includedir is builddir because it is used to find gstconfig.h in places
 includedir=@abs_top_builddir@/gst-libs
+girdir=@abs_top_builddir@/gst-libs/gst/tag
+typelibdir=@abs_top_builddir@/gst-libs/gst/tag
 
 Name: GStreamer Tag Library, Uninstalled
 Description: Tag base classes and helper functions, uninstalled
