--- a/gst/rtsp-server/Makefile.am
+++ b/gst/rtsp-server/Makefile.am
@@ -60,6 +60,8 @@ GstRtspServer-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstrtspserver-@G
 		-DIN_GOBJECT_INTROSPECTION=1 \
 		--c-include='gst/gst.h' \
 		--add-include-path=`$(PKG_CONFIG) --variable=girdir gstreamer-0.10` \
+		--add-include-path=`$(PKG_CONFIG) --variable=girdir gstreamer-rtsp-0.10` \
+		--add-include-path=`$(PKG_CONFIG) --variable=girdir gstreamer-sdp-0.10` \
 		--library=libgstrtspserver-0.10.la \
 		--include=Gst-0.10 \
 		--include=GstRtsp-0.10 \
@@ -81,7 +83,13 @@ typelibsdir = $(libdir)/girepository-1.0/
 typelibs_DATA = $(BUILT_GIRSOURCES:.gir=.typelib)
 
 %.typelib: %.gir $(INTROSPECTION_COMPILER)
-	$(AM_V_GEN)$(INTROSPECTION_COMPILER) --includedir=$(srcdir) --includedir=$(builddir) $(INTROSPECTION_COMPILER_OPTS) $< -o $(@F)
+	$(AM_V_GEN)$(INTROSPECTION_COMPILER) \
+	--includedir=$(srcdir) \
+	--includedir=$(builddir) \
+	--includedir=`$(PKG_CONFIG) --variable=girdir gstreamer-0.10` \
+	--includedir=`$(PKG_CONFIG) --variable=girdir gstreamer-rtsp-0.10` \
+	--includedir=`$(PKG_CONFIG) --variable=girdir gstreamer-sdp-0.10` \
+	$(INTROSPECTION_COMPILER_OPTS) $< -o $(@F)
 
 CLEANFILES += $(BUILT_GIRSOURCES) $(typelibs_DATA)
 endif
