gobject-introspection: fix g-i build for uninstalled setup
 Requires gst-plugins-base git (> 0.10.31.2) to actually work.

--- a/configure.ac
+++ b/configure.ac
@@ -74,6 +74,8 @@ AG_GST_ARG_WITH_PKG_CONFIG_PATH
 AG_GST_ARG_WITH_PACKAGE_NAME
 AG_GST_ARG_WITH_PACKAGE_ORIGIN
 
+AG_GST_PKG_CONFIG_PATH
+
 dnl *** checks for platform ***
 
 dnl * hardware/architecture *
