test: make unit tests compile and work in uninstalled setup

--- a/tests/check/Makefile.am
+++ b/tests/check/Makefile.am
@@ -31,7 +31,12 @@ noinst_HEADERS =
 
 TESTS = $(check_PROGRAMS)
 
-AM_CFLAGS =  -I$(top_srcdir) $(GST_CFLAGS) $(GST_OBJ_CFLAGS) $(GST_CHECK_CFLAGS) $(CHECK_CFLAGS) $(GST_OPTION_CFLAGS)
-LDADD = $(top_builddir)/ges/libges-@GST_MAJORMINOR@.la $(GST_OBJ_LIBS) $(GST_CHECK_LIBS) $(CHECK_LIBS) 
+AM_CFLAGS =  -I$(top_srcdir) $(GST_PLUGINS_BASE_CFLAGS) $(GST_OBJ_CFLAGS) \
+	$(GST_CHECK_CFLAGS) $(GST_OPTION_CFLAGS) $(GST_CFLAGS) \
+	-UG_DISABLE_ASSERT -UG_DISABLE_CAST_CHECKS
+
+LDADD = $(top_builddir)/ges/libges-@GST_MAJORMINOR@.la \
+	$(GST_PLUGINS_BASE_LIBS) -lgstpbutils-$(GST_MAJORMINOR) \
+	$(GST_OBJ_LIBS) $(GST_CHECK_LIBS)
 
 EXTRA_DIST = #gst-plugins-bad.supp
