camerabin: use private input-selector that still has "select-all" property
The "select-all" property was removed when input-selector was moved
to core, but camerabin uses this, so make camerabin use a private
copy until a better fix is found.

--- a/gst/camerabin/Makefile.am
+++ b/gst/camerabin/Makefile.am
@@ -16,6 +16,7 @@ plugin_LTLIBRARIES = libgstcamerabin.la
 
 libgstcamerabin_la_SOURCES = gstcamerabin.c             \
 			  gstcamerabincolorbalance.c \
+			  gstinputselector.c         \
 			  camerabinimage.c           \
 			  camerabinvideo.c           \
 			  camerabingeneral.c         \
@@ -37,6 +38,7 @@ libgstcamerabin_la_LIBTOOLFLAGS = --tag=disable-static
 
 noinst_HEADERS = gstcamerabin.h             \
 		 gstcamerabincolorbalance.h \
+		 gstinputselector.h         \
 		 camerabinimage.h           \
 		 camerabinvideo.h           \
 		 camerabindebug.h           \
