rtsp-media: add and use fsfunnel
Add a copy of fsfunnel to the build because input-selector removed the (broken)
select-all property that we need.

--- a/gst/rtsp-server/Makefile.am
+++ b/gst/rtsp-server/Makefile.am
@@ -1,4 +1,5 @@
 public_headers = \
+		fs-funnel.h \
 		rtsp-params.h \
 		rtsp-sdp.h \
 		rtsp-media.h \
@@ -11,6 +12,7 @@ public_headers = \
 		rtsp-server.h
 
 c_sources = \
+	fs-funnel.c \
 	rtsp-params.c \
 	rtsp-sdp.c \
 	rtsp-media.c \
