--- a/gst/rtsp-server/Makefile.am
+++ b/gst/rtsp-server/Makefile.am
@@ -1,5 +1,5 @@
 public_headers = \
-		fs-funnel.h \
+		rtsp-funnel.h \
 		rtsp-params.h \
 		rtsp-sdp.h \
 		rtsp-media.h \
@@ -12,7 +12,7 @@ public_headers = \
 		rtsp-server.h
 
 c_sources = \
-	fs-funnel.c \
+	rtsp-funnel.c \
 	rtsp-params.c \
 	rtsp-sdp.c \
 	rtsp-media.c \
