docs: Fix for uploading docs

--- a/docs/libs/Makefile.am
+++ b/docs/libs/Makefile.am
@@ -7,8 +7,8 @@ MODULE=ges
 DOC_MODULE=$(MODULE)
 
 # for upload-doc.mak
-DOC=$(MODULE)
-FORMATS=html ps pdf
+DOC=gstreamer-editing-services
+FORMATS=html
 html: html-build.stamp
 include $(top_srcdir)/common/upload-doc.mak
 
