gobject-introspection: make g-ir-scanner try harder to find the right libgstreamer
It's not quite clear to me why g-ir-scanner doesn't get this info from
the pkg-config file, nor why libtool doesn't get it from the .la.

https://bugzilla.gnome.org/show_bug.cgi?id=637549

--- a/libs/gst/base/Makefile.am
+++ b/libs/gst/base/Makefile.am
@@ -65,6 +65,7 @@ GstBase-@GST_MAJORMINOR@.gir: $(INTROSPECTION_SCANNER) libgstbase-@GST_MAJORMINO
 		-I$(top_builddir)/libs \
 		$(gir_cincludes) \
 		--add-include-path=$(top_builddir)/gst \
+		--library-path=$(top_builddir)/gst \
 		--library=libgstbase-0.10.la \
 		--include=Gst-0.10 \
 		--libtool="$(top_builddir)/libtool" \
