ges-launch: Add GStreamer major/minor version to the executable filename
https://bugzilla.gnome.org/show_bug.cgi?id=639222

--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -1,3 +1,6 @@
-bin_PROGRAMS = ges-launch
+bin_PROGRAMS = ges-launch-@GST_MAJORMINOR@
 AM_CFLAGS =  -I$(top_srcdir) $(GST_PBUTILS_CFLAGS) $(GST_CFLAGS)
 LDADD = $(top_builddir)/ges/libges-@GST_MAJORMINOR@.la $(GST_PBUTILS_LIBS) $(GST_LIBS) 
+
+ges_launch_@GST_MAJORMINOR@_SOURCES = ges-launch.c
+
