testsuite: Add a make command to run tests forever
And will stop once they fail. Useful to debug racy tests.

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -114,6 +114,13 @@ TESTS_ENVIRONMENT = PYTHONPATH=$(top_builddir):$(top_builddir)/gst/.libs:`pwd`:$
 	@PYTHONPATH=$(top_builddir):$(top_builddir)/gst/.libs:`pwd`:$(top_srcdir):$(PYTHONPATH) $(PYTHON) $(srcdir)/runtests.py $*
 	@rm -fr *.pyc
 
+%.forever: %
+	@PYTHONPATH=$(top_builddir):$(top_builddir)/gst/.libs:`pwd`:$(top_srcdir):$(PYTHONPATH) $(PYTHON) $(srcdir)/cleanup.py
+	@while true; do \
+	PYTHONPATH=$(top_builddir):$(top_builddir)/gst/.libs:`pwd`:$(top_srcdir):$(PYTHONPATH) \
+	$(PYTHON) $(srcdir)/runtests.py $* || break; done
+	@rm -fr *.pyc
+
 # valgrind all tests
 valgrind: $(tests)
 	@echo "Valgrinding tests ..."
