--- a/gst/videoparsers/Makefile.am
+++ b/gst/videoparsers/Makefile.am
@@ -1,6 +1,6 @@
 plugin_LTLIBRARIES = libgsth263parse.la
 
-libgsth263parse_la_SOURCES = h263parse.c gsth263parse.c gstbaseparse.c
+libgsth263parse_la_SOURCES = plugin.c h263parse.c gsth263parse.c gstbaseparse.c
 libgsth263parse_la_CFLAGS = $(GST_CFLAGS)
 libgsth263parse_la_LIBADD = $(GST_BASE_LIBS) $(GST_LIBS)
 libgsth263parse_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
