--- a/configure.ac
+++ b/configure.ac
@@ -41,6 +41,8 @@ dnl we override it here if we need to for the release candidate of new series
 GST_MAJORMINOR=0.10
 AC_SUBST(GST_MAJORMINOR)
 
+AG_GST_LIBTOOL_PREPARE
+
 AC_LIBTOOL_WIN32_DLL
 AM_PROG_LIBTOOL
 
