rtpvp8: fix LIBS and CFLAGS order in Makefile.am

--- a/gst/rtpvp8/Makefile.am
+++ b/gst/rtpvp8/Makefile.am
@@ -7,8 +7,8 @@ libgstrtpvp8_la_SOURCES = gstrtpvp8.c \
 noinst_HEADERS = gstrtpvp8depay.h \
   gstrtpvp8pay.h
 
-libgstrtpvp8_la_CFLAGS = $(GST_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS)
-libgstrtpvp8_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) $(GST_LIBS) \
-    -lgstrtp-@GST_MAJORMINOR@ 
+libgstrtpvp8_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_CFLAGS)
+libgstrtpvp8_la_LIBADD = $(GST_PLUGINS_BASE_LIBS) -lgstrtp-@GST_MAJORMINOR@ \
+	$(GST_LIBS)
 libgstrtpvp8_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstrtpvp8_la_LIBTOOLFLAGS = --tag=disable-static
