videoparsers: dist h264parse.h, fixing make distcheck
Spotted by Nathanael D. Noblet

--- a/gst/videoparsers/Makefile.am
+++ b/gst/videoparsers/Makefile.am
@@ -8,5 +8,5 @@ libgsth263parse_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgsth263parse_la_LIBTOOLFLAGS = --tag=disable-static
 
 noinst_HEADERS = gsth263parse.h h263parse.h \
-	gsth264parse.h gsth264parse.h \
+	gsth264parse.h gsth264parse.h h264parse.h \
 	gstbaseparse.h
