--- a/gst-libs/gst/basecamerabinsrc/Makefile.am
+++ b/gst-libs/gst/basecamerabinsrc/Makefile.am
@@ -5,11 +5,13 @@ CLEANFILES = $(BUILT_SOURCES)
 
 libgstbasecamerabinsrc_@GST_MAJORMINOR@_la_SOURCES = \
         gstcamerabin-enum.c \
+        gstcamerabinpreview.c \
 	gstbasecamerasrc.c
 
 libgstbasecamerabinsrc_@GST_MAJORMINOR@includedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/basecamerabinsrc
 libgstbasecamerabinsrc_@GST_MAJORMINOR@include_HEADERS = \
 	gstcamerabin-enum.h \
+	gstcamerabinpreview.h \
 	gstbasecamerasrc.h
 
 libgstbasecamerabinsrc_@GST_MAJORMINOR@_la_CFLAGS = \
@@ -20,7 +22,7 @@ libgstbasecamerabinsrc_@GST_MAJORMINOR@_la_CFLAGS = \
 libgstbasecamerabinsrc_@GST_MAJORMINOR@_la_LIBADD = \
         $(top_builddir)/gst-libs/gst/interfaces/libgstphotography-@GST_MAJORMINOR@.la \
 	$(GST_PLUGINS_BASE_LIBS) -lgstinterfaces-$(GST_MAJORMINOR) \
-	$(GST_BASE_LIBS) $(GST_LIBS)
+	-lgstapp-$(GST_MAJORMINOR) $(GST_BASE_LIBS) $(GST_LIBS)
 
 libgstbasecamerabinsrc_@GST_MAJORMINOR@_la_LDFLAGS = $(GST_LIB_LDFLAGS) $(GST_ALL_LDFLAGS) $(GST_LT_LDFLAGS)
 
