icles: Add equalizer-test to the build system

--- a/tests/icles/Makefile.am
+++ b/tests/icles/Makefile.am
@@ -39,6 +39,10 @@ else
 X_TESTS =
 endif
 
+equalizer_test_SOURCES = equalizer-test.c
+equalizer_test_CFLAGS  = $(GST_CFLAGS)
+equalizer_test_LDADD   = $(GST_LIBS)
+
 videocrop_test_SOURCES = videocrop-test.c
 videocrop_test_CFLAGS  = $(GST_CFLAGS)
 videocrop_test_LDADD   = $(GST_LIBS)
@@ -51,5 +55,5 @@ videocrop2_test_SOURCES = videocrop2-test.c
 videocrop2_test_CFLAGS  = $(GST_CFLAGS)
 videocrop2_test_LDADD   = $(GST_LIBS)
 
-noinst_PROGRAMS = $(GTK_TESTS) $(OSS4_TESTS) $(V4L2_TESTS) $(X_TESTS) videocrop-test videobox-test videocrop2-test
+noinst_PROGRAMS = $(GTK_TESTS) $(OSS4_TESTS) $(V4L2_TESTS) $(X_TESTS) equalizer-test videocrop-test videobox-test videocrop2-test
 
