--- a/tests/icles/Makefile.am
+++ b/tests/icles/Makefile.am
@@ -25,11 +25,5 @@ endif
 GST_METADATA_TESTS =
 #endif
 
-equalizer_test_SOURCES = equalizer-test.c
-equalizer_test_CFLAGS  = $(GST_CFLAGS)
-equalizer_test_LDADD   = $(GST_LIBS)
-equalizer_test_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
-
-noinst_PROGRAMS = $(GST_SOUNDTOUCH_TESTS) $(GST_METADATA_TESTS) \
-	equalizer-test
+noinst_PROGRAMS = $(GST_SOUNDTOUCH_TESTS) $(GST_METADATA_TESTS)
 
