videoparsers: change plugin filename from libgsth263parse* to libgstvideoparsersbad*
Due to a registry bug you may need to manually remove your
registry file to make the new plugin appear with >0 features.

--- a/gst/videoparsers/Makefile.am
+++ b/gst/videoparsers/Makefile.am
@@ -1,16 +1,16 @@
-plugin_LTLIBRARIES = libgsth263parse.la
+plugin_LTLIBRARIES = libgstvideoparsersbad.la
 
-libgsth263parse_la_SOURCES = plugin.c \
+libgstvideoparsersbad_la_SOURCES = plugin.c \
 	h263parse.c gsth263parse.c \
 	gsth264parse.c h264parse.c \
 	gstdiracparse.c dirac_parse.c
-libgsth263parse_la_CFLAGS = \
+libgstvideoparsersbad_la_CFLAGS = \
 	$(GST_PLUGINS_BAD_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS)
-libgsth263parse_la_LIBADD = \
+libgstvideoparsersbad_la_LIBADD = \
 	$(top_builddir)/gst-libs/gst/baseparse/libgstbaseparse-$(GST_MAJORMINOR).la \
 	$(GST_BASE_LIBS) $(GST_LIBS)
-libgsth263parse_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
-libgsth263parse_la_LIBTOOLFLAGS = --tag=disable-static
+libgstvideoparsersbad_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
+libgstvideoparsersbad_la_LIBTOOLFLAGS = --tag=disable-static
 
 noinst_HEADERS = gsth263parse.h h263parse.h \
 	gsth264parse.h h264parse.h \
