--- a/tools/gst-launch.1.in
+++ b/tools/gst-launch.1.in
@@ -4,7 +4,7 @@ gst\-launch \- build and run a GStreamer pipeline
 .SH "SYNOPSIS"
 \fBgst\-launch\fR \fI[OPTION...]\fR PIPELINE\-DESCRIPTION
 .SH "DESCRIPTION"
-.LP 
+.LP
 \fIgst\-launch\fP is a tool that builds and runs basic
 \fIGStreamer\fP pipelines.
 
@@ -43,6 +43,10 @@ Output tags (also known as metadata)
 Force an EOS event on sources before shutting the pipeline down. This is
 useful to make sure muxers create readable files when a muxing pipeline is
 shut down forcefully via Control-C.
+.TP 8
+.B  \-i, \-\-index
+Gather and print index statistics. This is mostly useful for playback or
+recording pipelines.
 .TP 8
 .B  \-o FILE, \-\-output=FILE
 Save XML representation of pipeline to FILE and exit (DEPRECATED, DO NOT USE)
@@ -114,7 +118,7 @@ plugins to preload is to use the environment variable GST_PLUGIN_PATH
 
 .SH "PIPELINE DESCRIPTION"
 
-A pipeline consists \fIelements\fR and \fIlinks\fR. \fIElements\fR can be put 
+A pipeline consists \fIelements\fR and \fIlinks\fR. \fIElements\fR can be put
 into \fIbins\fR of different sorts. \fIElements\fR, \fIlinks\fR and \fIbins\fR
 can be specified in a pipeline description in any order.
 
@@ -138,7 +142,7 @@ Enumeration properties can be set by name, nick or value.
 \fI[BINTYPE.]\fR ( \fI[PROPERTY1 ...]\fR PIPELINE-DESCRIPTION )
 .br
 
-Specifies that a bin of type BINTYPE is created and the given properties are 
+Specifies that a bin of type BINTYPE is created and the given properties are
 set. Every element between the braces is put into the bin. Please note the dot
 that has to be used after the BINTYPE. You will almost never need this
 functionality, it is only really useful for applications using the
@@ -194,11 +198,11 @@ and the type can have the following case-insensitive values:
 .br
 - \fBl\fR or \fBlist\fR for lists
 .br
-If no type was given, the following order is tried: integer, float, boolean, 
+If no type was given, the following order is tried: integer, float, boolean,
 string.
 .br
 Integer values must be parsable by \fBstrtol()\fP, floats by \fBstrtod()\fP. FOURCC values may
-either be integers or strings. Boolean values are (case insensitive) \fIyes\fR, 
+either be integers or strings. Boolean values are (case insensitive) \fIyes\fR,
 \fIno\fR, \fItrue\fR or \fIfalse\fR and may like strings be escaped with " or '.
 .br
 Ranges are in this format:  [ VALUE, VALUE ]
@@ -390,7 +394,7 @@ automatically. To make this even easier, you can use the playbin element:
 .B
         gst\-launch playbin uri=file:///home/joe/foo.avi
 .br
-  
+
 
 .B Filtered connections
 
@@ -438,7 +442,7 @@ Specifies a list of directories to scan for additional plugins.
 These take precedence over the system plugins.
 .TP
 \fBGST_PLUGIN_SYSTEM_PATH\fR
-Specifies a list of plugins that are always loaded by default.  If not set, 
+Specifies a list of plugins that are always loaded by default.  If not set,
 this defaults to the system-installed path, and the plugins installed in the
 user's home directory
 .TP
