app: remove appbuffer
There are no more buffer subclasses and the application can use the regular API
to make buffers.

--- a/gst-libs/gst/app/Makefile.am
+++ b/gst-libs/gst/app/Makefile.am
@@ -14,7 +14,7 @@ BUILT_SOURCES = $(built_sources) $(built_headers)
 nodist_libgstapp_@GST_MAJORMINOR@_la_SOURCES = \
              $(built_sources)
 
-libgstapp_@GST_MAJORMINOR@_la_SOURCES = gstappsrc.c gstappbuffer.c gstappsink.c 
+libgstapp_@GST_MAJORMINOR@_la_SOURCES = gstappsrc.c gstappsink.c 
 libgstapp_@GST_MAJORMINOR@_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) \
 	$(GST_BASE_CFLAGS) $(GST_CFLAGS)
 libgstapp_@GST_MAJORMINOR@_la_LIBADD = $(GST_BASE_LIBS)
@@ -24,7 +24,6 @@ libgstapp_@GST_MAJORMINOR@_la_LIBTOOLFLAGS = --tag=disable-static
 libgstapp_@GST_MAJORMINOR@includedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/app
 libgstapp_@GST_MAJORMINOR@include_HEADERS = \
 	gstappsrc.h \
-	gstappbuffer.h \
 	gstappsink.h
 
 CLEANFILES = $(BUILT_SOURCES)
