--- a/tests/check/Makefile.am
+++ b/tests/check/Makefile.am
@@ -139,12 +139,14 @@ TESTS = $(check_PROGRAMS)
 
 noinst_HEADERS = \
 	gst/capslist.h \
+	gst/struct_arm.h \
 	gst/struct_i386.h \
 	gst/struct_hppa.h \
 	gst/struct_ppc32.h \
 	gst/struct_ppc64.h \
 	gst/struct_sparc.h \
 	gst/struct_x86_64.h \
+	libs/struct_arm.h \
 	libs/struct_i386.h \
 	libs/struct_hppa.h \
 	libs/struct_ppc32.h \
